--- a/home.html
+++ b/home.html
@@ -5,5 +5,9 @@
 	<title>Git repo thing</title>
  	<meta charset="utf-8">
  </head>
- <body></body>
+ <body>
+<h1>hey</h1>
+<h2>hoho</h2>
+<h3>haha</h3>
+ </body>
  </html>
