--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
  	<meta charset="utf-8">
  </head>
 
- <body></body>
+ <body>
 <h1>hey</h1>
 <h2>hoho</h2>
 <h3>haha</h3>
 <h4>sdfasdf</h4>
 <h5>afeef</h5>
  </body>
+
+
  </html>
