--- a/home.html
+++ b/home.html
@@ -6,11 +6,12 @@
  	<meta charset="utf-8">
  </head>
 
- <body></body>
-<h1>hey</h1>
-<h2>hoho</h2>
-<h3>haha</h3>
-<h4>sdfasdf</h4>
-<h5>afeef</h5>
+ <body>
+<nav>
+	<a href="#">Goes places</a>
+	<a href="#">head home</a>
+
+
  </body>
+
  </html>
